--- a/library-web-client/pom.xml
+++ b/library-web-client/pom.xml
@@ -12,19 +12,30 @@
 	<dependencies></dependencies>
 
 	<build>
-		<plugins>
+		<plugins>			
 			<plugin>
-				<groupId>com.google.appengine</groupId>
-				<artifactId>appengine-maven-plugin</artifactId>
-			</plugin>
-
-			<!-- Create WAR package -->
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.3.2</version>
+				<executions>
+					<execution>
+						<id>build application</id>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<phase>prepare-package</phase>
+						<configuration>
+							<executable>grunt</executable>
+							<workingDirectory>src/main/webresources</workingDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>		
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.6</version>
 				<configuration>
-					<warSourceExcludes>**/node_modules/**,/test/**,**/bower_components/**,bower.json,Gruntfile.js,package.json,README.md,**/app/**,**/dist/**</warSourceExcludes>
 					<webResources>
 			            <resource>
 			                <directory>src/main/webresources/dist</directory>
@@ -32,6 +43,10 @@
 			        </webResources>
 				</configuration>
 			</plugin>
-		</plugins>
+			<plugin>
+					<groupId>com.google.appengine</groupId>
+				<artifactId>appengine-maven-plugin</artifactId>
+			</plugin>	
+		</plugins>	
 	</build>
 </project>
