--- a/library-web-client/src/main/webresources/package.json
+++ b/library-web-client/src/main/webresources/package.json
@@ -23,6 +23,7 @@
     "grunt-newer": "^1.1.0",
     "grunt-ng-annotate": "^0.9.2",
     "grunt-postcss": "^0.5.5",
+    "grunt-protractor-runner": "^3.0.0",
     "grunt-svgmin": "^2.0.0",
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
@@ -30,12 +31,14 @@
     "jshint-stylish": "^1.0.0",
     "karma-jasmine": "*",
     "karma-phantomjs-launcher": "*",
+    "protractor": "^3.0.0",
     "time-grunt": "^1.0.0"
   },
   "engines": {
     "node": ">=0.10.0"
   },
   "scripts": {
+    "install": "node node_modules/protractor/bin/webdriver-manager update",
     "test": "grunt test"
   }
 }
