--- a/library-ear/pom.xml
+++ b/library-ear/pom.xml
@@ -1,17 +1,24 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.roldan</groupId>
-    <artifactId>library</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <artifactId>library-ear</artifactId>
-  <packaging>ear</packaging>
-  
-  <dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.roldan</groupId>
+		<artifactId>library</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<artifactId>library-ear</artifactId>
+	<packaging>ear</packaging>
+
+	<dependencies>
 		<dependency>
 			<groupId>com.roldan</groupId>
 			<artifactId>library-web-client</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<type>war</type>
+		</dependency>
+		<dependency>
+			<groupId>com.roldan</groupId>
+			<artifactId>library-web-api</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 			<type>war</type>
 		</dependency>
@@ -28,6 +35,11 @@
 							<groupId>com.roldan</groupId>
 							<artifactId>library-web-client</artifactId>
 							<contextRoot>/default</contextRoot>
+						</webModule>
+						<webModule>
+							<groupId>com.roldan</groupId>
+							<artifactId>library-web-api</artifactId>
+							<contextRoot>/api</contextRoot>
 						</webModule>
 					</modules>
 				</configuration>
