--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	<modules>
 		<module>library-ear</module>
 		<module>library-web-client</module>
+		<module>library-web-api</module>
 	</modules>
 
 	<build>
