--- a/library-web-api/src/main/webapp/WEB-INF/web.xml
+++ b/library-web-api/src/main/webapp/WEB-INF/web.xml
@@ -14,12 +14,33 @@
 		    <param-name>jersey.config.server.provider.packages</param-name>
 		    <param-value>com.roldan.library.interfaces.rest</param-value>
 		</init-param>
+		<init-param>
+        <param-name>jersey.config.server.provider.packages</param-name>
+        <param-value>
+            io.swagger.jaxrs.listing,
+            com.roldan.library.interfaces.rest
+        </param-value>
+      </init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>ServletContainer</servlet-name>
 		<url-pattern>/s/*</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+        <servlet-name>Jersey2Config</servlet-name>
+        <servlet-class>io.swagger.jersey.config.JerseyJaxrsConfig</servlet-class>
+        <init-param>
+            <param-name>api.version</param-name>
+            <param-value>1.0.0</param-value>
+        </init-param>
+        <init-param>
+            <param-name>swagger.api.basepath</param-name>
+            <param-value>http://localhost:8080/api</param-value>
+        </init-param>
+        <load-on-startup>2</load-on-startup>
+    </servlet>
 
 	<filter>
 		<filter-name>guice-filter</filter-name>
