--- a/library-web-api/pom.xml
+++ b/library-web-api/pom.xml
@@ -85,6 +85,14 @@
 			<version>${appengine.target.version}</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- Swagger -->
+		<dependency>
+			<groupId>io.swagger</groupId>
+			<artifactId>swagger-jersey2-jaxrs</artifactId>
+			<version>1.5.5</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
@@ -97,10 +105,10 @@
 				<groupId>com.google.appengine</groupId>
 				<artifactId>appengine-maven-plugin</artifactId>
 				<configuration>
-		             <jvmFlags>
-				         <jvmFlag>-Dcom.google.appengine.devappserver_module.api.port=8081</jvmFlag>
-				      </jvmFlags>
-		         </configuration>
+					<jvmFlags>
+						<jvmFlag>-Dcom.google.appengine.devappserver_module.api.port=8081</jvmFlag>
+					</jvmFlags>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
