--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 		<appengine.app.version>1</appengine.app.version>
 		<appengine.target.version>1.9.30</appengine.target.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<jersey.version>2.22.1</jersey.version>
 	</properties>
 
 	<modules>
